# lab

./: .gitignore  404.html  CNAME  README.md  book.toml  ideas.html  index.html  print.html  searchindex.js  searchindex.json  toc.css
.github/workflows/: blank.yml  deploy.yml
afm/: atomic_force_microscope.html
airlift/: airlift.html
airlift/wavedrom/: reset.json
preprocess/: Cargo.toml
preprocess/src/: main.rs  toc.rs
src/: README.md  SUMMARY.md  ideas.md
src/afm/: atomic_force_microscope.md
src/airlift/: airlift.md
theme/: index.hbs
